--- a/PersonalDesktopOnline/WebContent/styles/NotesStyle.css
+++ b/PersonalDesktopOnline/WebContent/styles/NotesStyle.css
@@ -7,19 +7,47 @@ body {
 }
 
 .note {
-	height: 100px; 
-	width: 100px;
+	height: 150px; 
+	width: 150px;
 	background-image: url(../images/note.png);
 	background-repeat: no-repeat;
 	background-size: contain;
-	/*top: 5%;*/
-	padding: 20px;
+	padding-top: 60px;
+	padding-bottom: 40px;
+	padding-left: 40px;
+	padding-right: 60px;
 	display: inline-block;
-	font-size: 12px;
+	font-size: 15px;
 }
 
-.note:hover {
-	height: 110px;
-	width: 110px;
-	font-size: 13px;
+.noteText {
+	height: 140px;
+	width: 100px;	
 }
+
+.closeButton {
+	position: relative;
+	width: 20px;
+    height: 20px;
+	top: -20px; 
+    left: 90%;
+}
+
+.closeIcon {
+	opacity: 0.25;
+    filter: alpha(opacity=25); /* For IE8 and earlier */
+    width: 20px;
+    height: 20px;
+}
+
+
+.closeIcon:hover {
+    opacity: 1.0;
+    filter: alpha(opacity=100); /* For IE8 and earlier */
+}
+
+/*.note:hover {
+	height: 166px;
+	width: 166px;
+	font-size: 16px;
+}*/
