--- a/PersonalDesktopOnline/WebContent/styles/ContactsStyle.css
+++ b/PersonalDesktopOnline/WebContent/styles/ContactsStyle.css
@@ -110,7 +110,7 @@ li
 h2
 {
 	border-bottom: 1px solid #A5A5A5;
-	width: 60%;
+	width: 100%;
 }
 
 .button {
@@ -154,11 +154,33 @@ h2
     background: url(http://cssdeck.com/uploads/media/items/5/5Fm069k.png) 10px -25px no-repeat #f3f3f3;
     padding-left: 30px;
     vertical-align: middle;
+    float: right;
 }
 
 .back {
 	float: left;
     background: url(http://cssdeck.com/uploads/media/items/5/5Fm069k.png)  10px -61px no-repeat #f3f3f3;
     padding-left: 30px;
+	vertical-align: middle;
+}
+
+.edit {
+	float: right;
+    background: url(http://cssdeck.com/uploads/media/items/5/5Fm069k.png)  10px -61px no-repeat #f3f3f3;
+    padding-left: 30px;
+	
+}
+
+.p
+{
+	vertical-align: middle;
+	text-align: center;
+}
+
+input[ name="search"]
+{
+	font-family: Arial;
+	font-size: 12pt;
+	font-family: Arial;
 	vertical-align: middle;
 }
