--- a/PersonalDesktopOnline/WebContent/styles/style.css
+++ b/PersonalDesktopOnline/WebContent/styles/style.css
@@ -12,6 +12,23 @@ body {
 	width: 5%;
 }
 
+#logout {
+	position : fixed;
+	top: 1%;
+	right : 1%;
+	width: 3%;
+}
+
+.logout_icon {
+	opacity: 0.8;
+	width: 100%;
+	height: 100%;
+}
+
+.logout_icon:hover{
+	opacity: 1;
+}
+
 .option_icon {
     opacity: 0.25;
     filter: alpha(opacity=25); /* For IE8 and earlier */
