--- a/PersonalDesktopOnline/WebContent/styles/NotesStyle.css
+++ b/PersonalDesktopOnline/WebContent/styles/NotesStyle.css
@@ -7,8 +7,8 @@ body {
 }
 
 .note {
-	height: 150px; 
-	width: 150px;
+	height: 200px; 
+	width: 200px;
 	background-image: url(../images/note.png);
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -21,8 +21,9 @@ body {
 }
 
 .noteText {
-	height: 140px;
-	width: 100px;	
+	height: 170px;
+	width: 180px;
+	overflow: hidden;
 }
 
 .closeButton {
@@ -46,8 +47,46 @@ body {
     filter: alpha(opacity=100); /* For IE8 and earlier */
 }
 
-/*.note:hover {
-	height: 166px;
-	width: 166px;
-	font-size: 16px;
-}*/
+.addNoteButton {
+	opacity: 0.70;
+	width: 55px;
+  	height: 55px;
+  	margin-left: 20px;
+  	margin-top: 20px;
+  	padding: 0;
+  	border: 0;
+  	background-image: url(../images/notes_add.jpg);
+  	background-repeat: no-repeat;
+  	background-size: contain;
+  	background-color: transparent; 
+  	text-indent: -1000em;
+  	cursor: pointer; /* hand-shaped cursor */
+  	cursor: hand; /* for IE 5.x */
+  	display: inline-block;
+}
+
+.addNoteButton:hover {
+	opacity: 1.0;
+}
+
+.backButton {
+	opacity: 0.50;
+	width: 55px;
+  	height: 55px;
+	margin-left: 20px;
+	margin-left: 20px;
+  	padding: 0;
+  	border: 0;
+  	background-image: url(../images/notes_back.jpg);
+  	background-repeat: no-repeat;
+  	background-size: contain;
+  	background-color: transparent; 
+  	text-indent: -1000em;
+  	cursor: pointer; /* hand-shaped cursor */
+  	cursor: hand; /* for IE 5.x */
+  	display: inline-block;
+}
+
+.backButton:hover {
+	opacity: 1.0;
+}
